# ai-genealogy

./: .bandit  .bandit.prod  .env.example  .gitignore  DOCKER_README.md  Dockerfile  Makefile  PROJECT_PLAN.md  QUALITY_GATE.md  README.md  docker-compose.yml  docker-entrypoint.sh  docker-test.sh  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  test-ocr-workflow.py
.github/workflows/: quality-gate.yml
docs/: DESIGN_LESSONS_LEARNED.md  INSTRUCTIONS.md  PROJECT_PLAN.md  TESTING_LESSONS_LEARNED.md
genealogy/: admin.py  models.py  ocr_processor.py  tasks.py
genealogy/management/commands/: demo_ocr.py  fix_page_numbers.py
genealogy/migrations/: 0001_initial.py  0002_remove_document_file_path_remove_document_filename_and_more.py  0003_remove_document_file_document_languages_documentpage.py  0004_alter_document_languages.py
genealogy/static/genealogy/css/: admin.css
genealogy/templates/admin/genealogy/document/: batch_upload.html  change_list.html
genealogy/tests/: test_admin.py  test_models.py  test_ocr_processor.py  test_tasks.py
genealogy_extractor/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
scripts/: lint.sh
